--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.0",
     "private-route-react": "^1.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0"
   },
