--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.0",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "private-route-react": "^1.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
