--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "antd": "^5.14.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
-
     "formik": "^2.4.5",
-
     "js-cookie": "^3.0.5",
     "private-route-react": "^1.1.12",
     "react": "^18.2.0",
@@ -27,7 +25,8 @@
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
